--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,6 +22,12 @@
           Assoc. Prof. Department of Architecture</br>
           National University of Singapore
         </p>
+        <a href="research.html">Research</a>
+        <a href="teaching.html">Teaching</a>
+        <a href="pubs.html">Publications</a>
+        <a href="links.html">Links</a>
+        <a href="about.html">About</a>
+
       </header>
 
       <section>
