--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,11 +22,11 @@
           Assoc. Prof. Department of Architecture</br>
           National University of Singapore
         </p>
-        <a href="research.html">Research</a>
-        <a href="teaching.html">Teaching</a>
-        <a href="pubs.html">Publications</a>
-        <a href="links.html">Links</a>
-        <a href="about.html">About</a>
+        <h3><a href="research.html">Research</a></h3>
+        <h3><a href="teaching.html">Teaching</a></h3>
+        <h3><a href="pubs.html">Publications</a></h3>
+        <h3><a href="links.html">Links</a></h3>
+        <h3><a href="about.html">About</a></h3>
 
       </header>
 
