--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -1,4 +1,41 @@
 ---
 ---
 
+@import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600|Roboto+Condensed:400,700');
+
 @import "{{ site.theme }}";
+
+h1, h2, h3 {
+    font-family: 'Roboto Condensed', sans-serif;
+}
+
+body {
+    font-family: 'Open Sans', sans-serif;
+    color: #222 !important;
+}
+
+.title {
+    font-size: 3em;
+    font-style: normal;
+    color: white;
+    text-shadow: 0px 0px 10px black;
+}
+
+.nav {
+    font-size: 1.2em;
+    font-style: normal;
+    line-height: 1.3em;
+    margin: 0px;
+}
+
+.nav>a {
+    color: black;
+}
+
+.nav>a:hover {
+    color: orange;
+}
+
+html {
+  overflow-y: scroll;
+}
