--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,11 +22,14 @@
           Assoc. Prof. Department of Architecture</br>
           National University of Singapore
         </p>
-        <h3><a href="research.html">Research</a></h3>
-        <h3><a href="teaching.html">Teaching</a></h3>
-        <h3><a href="pubs.html">Publications</a></h3>
-        <h3><a href="links.html">Links</a></h3>
-        <h3><a href="about.html">About</a></h3>
+
+        <div class="nav-wrapper">
+          <h1><a href="research.html">Research</a></h1>
+          <h1><a href="teaching.html">Teaching</a></h1>
+          <h1><a href="pubs.html">Publications</a></h1>
+          <h1><a href="links.html">Links</a></h1>
+          <h1><a href="about.html">About</a></h1>
+        </div>
 
       </header>
 
