--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -21,6 +21,10 @@ body {
     text-shadow: 0px 0px 10px black;
 }
 
+.nav-wrapper {
+    margin-bottom: 15px;
+}
+
 .nav {
     font-size: 1.2em;
     font-style: normal;
@@ -37,5 +41,5 @@ body {
 }
 
 html {
-  overflow-y: scroll;
+    overflow-y: scroll;
 }
