--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -17,18 +17,18 @@
     <div class="wrapper">
 
       <header>
-        <a href="{{ site.github.url }}"> <h1>Patrick Janssen</h1> </a>
+        <a href="{{ site.github.url }}"> <h1 class="title">Patrick Janssen</h1> </a>
         <p>
           Assoc. Prof. Department of Architecture</br>
           National University of Singapore
         </p>
 
         <div class="nav-wrapper">
-          <h1><a href="research.html">Research</a></h1>
-          <h1><a href="teaching.html">Teaching</a></h1>
-          <h1><a href="pubs.html">Publications</a></h1>
-          <h1><a href="links.html">Links</a></h1>
-          <h1><a href="about.html">About</a></h1>
+          <h1 class="nav"><a href="research.html">Research</a></h1>
+          <h1 class="nav"><a href="teaching.html">Teaching</a></h1>
+          <h1 class="nav"><a href="pubs.html">Publications</a></h1>
+          <h1 class="nav"><a href="links.html">Links</a></h1>
+          <h1 class="nav"><a href="about.html">About</a></h1>
         </div>
 
       </header>
