--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -26,9 +26,10 @@
         <div class="nav-wrapper">
           <h1 class="nav"><a href="research.html">Research</a></h1>
           <h1 class="nav"><a href="teaching.html">Teaching</a></h1>
+          <h1 class="nav"><a href="service.html">Service</a></h1>
           <h1 class="nav"><a href="pubs.html">Publications</a></h1>
           <h1 class="nav"><a href="links.html">Links</a></h1>
-          <h1 class="nav"><a href="about.html">About</a></h1>
+          <h1 class="nav"><a href="cv.html">CV</a></h1>
         </div>
 
       </header>
