--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -3,7 +3,7 @@
 
 @import url('https://fonts.googleapis.com/css?family=Open+Sans:400,600|Roboto+Condensed:400,700');
 
-@import "minimal";
+@import "jekyll-theme-minimal";
 
 h1, h2, h3, h4, h5 {
     font-family: 'Roboto Condensed', sans-serif;
