--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -17,7 +17,7 @@ body {
 .title {
     font-size: 3em;
     font-style: normal;
-    color: white;
+    color: red;
     text-shadow: 0px 0px 10px black;
 }
 
