--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
     <div class="wrapper">
 
       <header>
-        <a href="{{ site.github.url }}"> <h1 class="title">Patrick Janssen XX</h1> </a>
+        <a href="{{ site.github.url }}"> <h1 class="title">Patrick Janssen</h1> </a>
         <p>
           Assoc. Prof. Department of Architecture</br>
           National University of Singapore
