--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,7 +20,8 @@
       <header>
         <a href="{{ site.github.url }}"> <h1 class="title">Patrick Janssen</h1> </a>
         <p>
-          Assoc. Prof. Department of Architecture</br>
+          Associate Professor</br>
+          Department of Architecture</br>
           National University of Singapore
         </p>
 
