--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -32,7 +32,10 @@ ul {
 }
 
 li {
-  margin: 0.1em;
+  padding-top: 0.4em;
+  padding-right: 0;
+  padding-bottom: 0.4em;
+  padding-left: 0;
 }
 
 h1 {
