--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -6,7 +6,7 @@
 
 {% seo %}
 
-    <link rel="stylesheet" href="{{ './assets/css/style.css' }}">
+    <link rel="stylesheet" href="{{ '/assets/css/style.css' }}">
     <meta name="viewport" content="width=device-width">
   </head>
   <body>
@@ -15,6 +15,7 @@
 
       <header>
 
+        <h1 class="parent"><a href="http://design-automation.net">Design Automation Lab</a></h1>
         <h1 class="title"><a href="index.html">Patrick Janssen</a></h1>
 
         <p>
@@ -24,10 +25,11 @@
         </p>
 
         <div class="nav-wrapper">
+          <h1 class="nav"><a href="index.html">Overview</a></h1>
           <h1 class="nav"><a href="research.html">Research</a></h1>
           <h1 class="nav"><a href="teaching.html">Teaching</a></h1>
+          <h1 class="nav"><a href="students.html">Students</a></h1>
           <h1 class="nav"><a href="service.html">Service</a></h1>
-          <h1 class="nav"><a href="software.html">Software Tools</a></h1>
           <h1 class="nav"><a href="pubs.html">Publications</a></h1>
           <h1 class="nav"><a href="cv.html">CV</a></h1>
           <h1 class="nav"><a href="links.html">Links</a></h1>
@@ -38,10 +40,6 @@
       <section>
         {{ content }}
       </section>
-
-      <footer>
-        <p><small>Hosted on GitHub Pages</small></p>
-      </footer>
 
     </div>
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
