--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -31,6 +31,7 @@
           <h1 class="nav"><a href="students.html">Students</a></h1>
           <h1 class="nav"><a href="service.html">Service</a></h1>
           <h1 class="nav"><a href="pubs.html">Publications</a></h1>
+          <h1 class="nav"><a href="presentations.html">Presentations</a></h1>
           <h1 class="nav"><a href="cv.html">CV</a></h1>
           <h1 class="nav"><a href="links.html">Links</a></h1>
         </div>
