--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -23,7 +23,11 @@
           Department of Architecture</br>
           National University of Singapore
         </p>
-
+        <p>
+          Visiting Associate Professor</br>
+          Department of Urbanism</br>
+          TU Delft
+        </p>
         <div class="nav-wrapper">
           <h1 class="nav"><a href="index.html">Overview</a></h1>
           <h1 class="nav"><a href="research.html">Research</a></h1>
