--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -20,13 +20,14 @@
 
         <p>
           Associate Professor</br>
-          Department of Architecture</br>
-          National University of Singapore
+          <a href="http://www.arch.nus.edu.sg">Department of Architecture</a></br>
+          <a href="http://www.nus.edu.sg">National University of Singapore</a>
         </p>
         <p>
-          Visiting Associate Professor</br>
-          Department of Urbanism</br>
-          TU Delft
+          Adjunct Associate Professor</br>
+          <a href="http://https://3d.bk.tudelft.nl/">3D Geoinformation</a></br>
+          <a href="http://https://www.tudelft.nl/en/architecture-and-the-built-environment/about-the-faculty/departments/urbanism/">Department of Urbanism</a></br>
+          <a href="https://www.tudelft.nl/en/architecture-and-the-built-environment">TU Delft</a>
         </p>
         <div class="nav-wrapper">
           <h1 class="nav"><a href="index.html">Overview</a></h1>
