--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,17 +18,15 @@
         <h1 class="parent"><a href="http://design-automation.net">Design Automation Lab</a></h1>
         <h1 class="title"><a href="index.html">Patrick Janssen</a></h1>
 
-        <p>
-          Associate Professor</br>
-          <a href="http://www.arch.nus.edu.sg">Department of Architecture</a></br>
-          <a href="http://www.nus.edu.sg">National University of Singapore</a>
-        </p>
-        <p>
-          Adjunct Associate Professor</br>
-          <a href="http://https://3d.bk.tudelft.nl/">3D Geoinformation</a></br>
-          <a href="http://https://www.tudelft.nl/en/architecture-and-the-built-environment/about-the-faculty/departments/urbanism/">Department of Urbanism</a></br>
-          <a href="https://www.tudelft.nl/en/architecture-and-the-built-environment">TU Delft</a>
-        </p>
+        <h4>Associate Professor</h4>
+        <h4><a href="http://www.arch.nus.edu.sg">Department of Architecture</a></h4>
+        <h4><a href="http://www.nus.edu.sg">National University of Singapore</a></h4>
+
+        <h4>Adjunct Associate Professor</h4>
+        <h4><a href="http://https://3d.bk.tudelft.nl/">3D Geoinformation</a></h4>
+        <h4><a href="http://https://www.tudelft.nl/en/architecture-and-the-built-environment/about-the-faculty/departments/urbanism/">Department of Urbanism</a></h4>
+        <h4><a href="https://www.tudelft.nl/en/architecture-and-the-built-environment">TU Delft</a></h4>
+
         <div class="nav-wrapper">
           <h1 class="nav"><a href="index.html">Overview</a></h1>
           <h1 class="nav"><a href="research.html">Research</a></h1>
