--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -98,10 +98,16 @@ h3 {
   font-size:1em;
 }
 
-h4, h5, h6 {
+h4, h5 {
   font-size:1em;
   font-style: italic;
   font-weight:400;
+}
+
+h6 {
+  font-size:1em;
+  font-weight:400;
+  margin:0;
 }
 
 /* ----------------------------------------------------------------------------------------------
