--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,8 +25,8 @@
         <br />
 
         <h6>Adjunct Associate Professor</h6>
-        <h6><a href="http://https://3d.bk.tudelft.nl/">3D Geoinformation</a></h6>
-        <h6><a href="http://https://www.tudelft.nl/en/architecture-and-the-built-environment/about-the-faculty/departments/urbanism/">Department of Urbanism</a></h6>
+        <h6><a href="http://3d.bk.tudelft.nl/">3D Geoinformation</a></h6>
+        <h6><a href="http://www.tudelft.nl/en/architecture-and-the-built-environment/about-the-faculty/departments/urbanism/">Department of Urbanism</a></h6>
         <h6><a href="https://www.tudelft.nl/en/architecture-and-the-built-environment">TU Delft</a></h6>
 
         <br />
