--- a/_includes/ref-book.html
+++ b/_includes/ref-book.html
@@ -2,15 +2,15 @@
 
     {% if include.smlfile %}
         <div class="ref-thumb">
-            <a href="/assets/images/{{ include.file }}">
-                <img class="ref-img" src="/assets/images/{{ include.smlfile }}" />
-            </a>
+            <img class="ref-img" src="/assets/pdf/{{ include.smlfile }}" onClick="openModal('/assets/pdf/{{ include.file }}')"/>
         </div>
-    {% elsif include.file %}
+    {% elsif include.researchgate_id %}
         <div class="ref-thumb">
-            <a href="/assets/images/{{ include.file }}">
-                <img class="ref-img" src="/assets/images/{{ include.file }}" />
-            </a>
+            <img class="ref-img" src="/assets/pdf/{{ include.researchgate_id }}_sml.png" onClick="openModal('/assets/pdf/{{ include.researchgate_id }}.png')"/>
+        </div>
+    {% else %}
+        <div class="ref-thumb">
+            <img class="ref-img" src="/assets/pdf/ref_in_progress.png" />
         </div>
     {% endif %}
 
@@ -19,7 +19,7 @@
         {% for author in authors %}
             {% if author != authors.last%}
                 {{ author }},
-            {% elsif include.file %}
+            {% else %}
                 {% if authors.size > 1 %}
                     and {{ author }}
                 {% else %}
@@ -30,6 +30,14 @@
         ({{ include.year}})
         <i>{{ include.title }}</i>,
         {{ include.publisher }}.
+        {% if include.researchgate_id %}
+            <a href="https://www.researchgate.net/publication/{{ include.researchgate_id }}" target="view">ResearchGate</a>,
+            <a href="/assets/pdf/{{ include.researchgate_id }}.pdf" target="view">PDF</a>
+        {% endif %}
+        {% if include.researchgate_id and include.link %},{% endif %}
+        {% if include.link %}
+            <a href="{{ include.link }}" target="view">Link</a>
+        {% endif %}
     </p>
 
 </div>
