--- a/_includes/ref-conf.html
+++ b/_includes/ref-conf.html
@@ -1,16 +1,16 @@
 <div class="ref-wrapper">
 
-    {% if include.researchgate_id %}
+    {% if include.smlfile %}
         <div class="ref-thumb">
-            <a href="/assets/pdf/{{ include.researchgate_id }}.png" target="view">
-                <img class="ref-img" src="/assets/pdf/{{ include.researchgate_id }}_sml.png" />
-            </a>
+            <img class="ref-img" src="/assets/pdf/{{ include.smlfile }}" onClick="openModal('/assets/pdf/{{ include.file }}')"/>
+        </div>
+    {% elsif include.researchgate_id %}
+        <div class="ref-thumb">
+            <img class="ref-img" src="/assets/pdf/{{ include.researchgate_id }}_sml.png" onClick="openModal('/assets/pdf/{{ include.researchgate_id }}.png')"/>
         </div>
     {% else %}
         <div class="ref-thumb">
-            <a href="/assets/pdf/ref_in_progress.png" target="view">
-                <img class="ref-img" src="/assets/pdf/ref_in_progress.png" />
-            </a>
+            <img class="ref-img" src="/assets/pdf/ref_in_progress.png" />
         </div>
     {% endif %}
 
@@ -19,7 +19,7 @@
         {% for author in authors %}
             {% if author != authors.last%}
                 {{ author }},
-            {% elsif include.file %}
+            {% else %}
                 {% if authors.size > 1 %}
                     and {{ author }}
                 {% else %}
@@ -37,9 +37,13 @@
             <a href="http://papers.cumincad.org/cgi-bin/works/paper/{{ include.cumincad_id }}"  target="view">Cumincad</a>,
         {% endif %}
         {% if include.researchgate_id %}
-            <a href="https://www.researchgate.net/publication/{{ include.researchgate_id }}"  target="view">Research Gate</a>,
-            <a href="/assets/pdf/{{ include.researchgate_id  }}.pdf" target="view">PDF</a>.
+            <a href="https://www.researchgate.net/publication/{{ include.researchgate_id }}"  target="view">ResearchGate</a>,
+            <a href="/assets/pdf/{{ include.researchgate_id  }}.pdf" target="view">PDF</a>,
         {% endif %}
+        {% if include.link %}
+            <a href="{{ include.link }}"  target="view">Link</a>
+        {% endif %}
+        .
     </p>
 
 </div>
