--- a/_includes/ref-journal.html
+++ b/_includes/ref-journal.html
@@ -1,25 +1,25 @@
 <div class="ref-wrapper">
 
-    {% if include.researchgate_id %}
+    {% if include.smlfile %}
         <div class="ref-thumb">
-            <a href="/assets/pdf/{{ include.researchgate_id }}.png" target="view">
-                <img class="ref-img" src="/assets/pdf/{{ include.researchgate_id }}_sml.png" />
-            </a>
+            <img class="ref-img" src="/assets/pdf/{{ include.smlfile }}" onClick="openModal('/assets/pdf/{{ include.file }}')"/>
+        </div>
+    {% elsif include.researchgate_id %}
+        <div class="ref-thumb">
+            <img class="ref-img" src="/assets/pdf/{{ include.researchgate_id }}_sml.png" onClick="openModal('/assets/pdf/{{ include.researchgate_id }}.png')"/>
         </div>
     {% else %}
         <div class="ref-thumb">
-            <a href="/assets/pdf/ref_in_progress.png" target="view">
-                <img class="ref-img" src="/assets/pdf/ref_in_progress.png" />
-            </a>
+            <img class="ref-img" src="/assets/pdf/ref_in_progress.png" />
         </div>
     {% endif %}
 
     <p class="ref">
         {% assign authors = include.authors | split: "|" %}
         {% for author in authors %}
-            {% if author != authors.last%}
+            {% if author != authors.last %}
                 {{ author }},
-            {% elsif include.file %}
+            {% else %}
                 {% if authors.size > 1 %}
                     and {{ author }}
                 {% else %}
@@ -30,13 +30,24 @@
         ({{ include.year}})
         <b>{{ include.title }}</b>,
         <i>{{ include.journal }}</i>,
-        {{include.volume}}({{include.issue}}), pp. {{include.pages}}.
-        {% if include.cumincad_id %}
-            <a href="http://papers.cumincad.org/cgi-bin/works/paper/{{ include.cumincad_id }}"  target="view">Cumincad</a>,
+        {% if include.volume %}
+            {{ include.volume }}
+            {% if include.issue %}
+                ({{ include.issue }})
+            {% endif %},
         {% endif %}
+        pp. {{include.pages}}.
+        {% if include.cumincad_id %}
+            <a href="http://papers.cumincad.org/cgi-bin/works/paper/{{ include.cumincad_id }}"  target="view">Cumincad</a>
+        {% endif %}
+        {% if include.cumincad_id and include.researchgate_id %},{% endif %}
         {% if include.researchgate_id %}
-            <a href="https://www.researchgate.net/publication/{{ include.researchgate_id }}"  target="view">Research Gate</a>,
-            <a href="/assets/pdf/{{ include.researchgate_id  }}.pdf" target="view">PDF</a>.
+            <a href="https://www.researchgate.net/publication/{{ include.researchgate_id }}"  target="view">ResearchGate</a>,
+            <a href="/assets/pdf/{{ include.researchgate_id }}.pdf" target="view">PDF</a>
+        {% endif %}
+        {% if include.researchgate_id and include.link %},{% endif %}
+        {% if include.link %}
+            <a href="{{ include.link }}" target="view">Link</a>
         {% endif %}
     </p>
 
