--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -51,19 +51,37 @@
       </section>
 
     </div>
+
+    <div id="modalImgDisplay" class="modal">
+      <!-- The Close Button -->
+      <span class="close" onClick="closeModal()">&times;</span>
+      <!-- Modal Content (The Image) -->
+      <img class="modal-content" id="modalImg">
+    </div>
+
     <script src="{{ '/assets/js/scale.fix.js' | relative_url }}"></script>
+    {% if site.google_analytics %}
+      <script>
+          (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+          (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+          m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+          })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
 
-
-  {% if site.google_analytics %}
+          ga('create', '{{ site.google_analytics }}', 'auto');
+          ga('send', 'pageview');
+      </script>
+    {% endif %}
     <script>
-        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-        ga('create', '{{ site.google_analytics }}', 'auto');
-        ga('send', 'pageview');
+      // Open the Modal
+      function openModal(src) {
+        document.getElementById('modalImgDisplay').style.display = "block";
+        document.getElementById('modalImg').src = src;
+      }
+      // Close the Modal
+      function closeModal() {
+        document.getElementById('modalImgDisplay').style.display = "none";
+        document.getElementById('modalImg').src = "";
+      }
     </script>
-  {% endif %}
   </body>
 </html>
