--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
       <header>
 
         <h1 class="parent"><a href="http://design-automation.net">Design Automation Lab</a></h1>
-        <h1 class="title"><a href="index.html">Patrick Janssen</a></h1>
+        <h1 class="title"><a href="/index.html">Patrick Janssen</a></h1>
 
         <h6>Associate Professor</h6>
         <h6><a href="http://www.arch.nus.edu.sg">Department of Architecture</a></h6>
@@ -32,16 +32,16 @@
         <br />
 
         <div class="nav-wrapper">
-          <h1 class="nav"><a href="index.html">Overview</a></h1>
-          <h1 class="nav"><a href="research.html">Research</a></h1>
-          <h1 class="nav"><a href="teaching.html">Teaching</a></h1>
-          <h1 class="nav"><a href="books_journals.html">Books and Journals</a></h1>
-          <h1 class="nav"><a href="conferences.html">Conferences</a></h1>
-          <h1 class="nav"><a href="presentations.html">Presentations</a></h1>
-          <h1 class="nav"><a href="students.html">Students</a></h1>
-          <h1 class="nav"><a href="service.html">Service</a></h1>
-          <h1 class="nav"><a href="cv.html">CV</a></h1>
-          <h1 class="nav"><a href="links.html">Links</a></h1>
+          <h1 class="nav"><a href="/index.html">Overview</a></h1>
+          <h1 class="nav"><a href="/pages/research.html">Research</a></h1>
+          <h1 class="nav"><a href="/pages/teaching.html">Teaching</a></h1>
+          <h1 class="nav"><a href="/pages/books_journals.html">Books and Journals</a></h1>
+          <h1 class="nav"><a href="/pages/conferences.html">Conferences</a></h1>
+          <h1 class="nav"><a href="/pages/presentations.html">Presentations</a></h1>
+          <h1 class="nav"><a href="/pages/students.html">Students</a></h1>
+          <h1 class="nav"><a href="/pages/service.html">Service</a></h1>
+          <h1 class="nav"><a href="/pages/cv.html">CV</a></h1>
+          <h1 class="nav"><a href="/pages/links.html">Links</a></h1>
         </div>
 
       </header>
