added software section

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -34,6 +34,7 @@
         <div class="nav-wrapper">
           <h1 class="nav"><a href="/index.html">Overview</a></h1>
           <h1 class="nav"><a href="/pages/research.html">Research</a></h1>
+          <h1 class="nav"><a href="/pages/software.html">Software</a></h1>
           <h1 class="nav"><a href="/pages/teaching.html">Teaching</a></h1>
           <h1 class="nav"><a href="/pages/books_journals.html">Books and Journals</a></h1>
           <h1 class="nav"><a href="/pages/conferences.html">Conferences</a></h1>
