--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -43,6 +43,7 @@
           <h1 class="nav"><a href="/pages/service.html">Service</a></h1>
           <h1 class="nav"><a href="/pages/cv.html">CV</a></h1>
           <h1 class="nav"><a href="/pages/links.html">Links</a></h1>
+          <h1 class="nav"><a href="/pages/contact.html">Contact</a></h1>
         </div>
 
       </header>
