--- a/_includes/ref-book.html
+++ b/_includes/ref-book.html
@@ -27,16 +27,17 @@
                 {% endif %}
             {% endif %}
         {% endfor %}
-        ({{ include.year}})
-        <i>{{ include.title }}</i>,
+        ({{ include.year }})
+            <i>{{ include.title }}</i>,
         {{ include.publisher }}.
         {% if include.researchgate_id %}
-            <a href="https://www.researchgate.net/publication/{{ include.researchgate_id }}" target="view">ResearchGate</a>,
-            <a href="/assets/pdf/{{ include.researchgate_id }}.pdf" target="view">PDF</a>
+            <a href="https://www.researchgate.net/publication/{{ include.researchgate_id }}" target="view">ResearchGate</a>
         {% endif %}
-        {% if include.researchgate_id and include.link %},{% endif %}
+        {% if not include.no_pdf %}
+            , <a href="/assets/pdf/{{ include.researchgate_id }}.pdf" target="view">PDF</a>
+        {% endif %}
         {% if include.link %}
-            <a href="{{ include.link }}" target="view">Link</a>
+            , <a href="{{ include.link }}" target="view">Link</a>
         {% endif %}
     </p>
 
