--- a/_includes/ref-conf.html
+++ b/_includes/ref-conf.html
@@ -39,7 +39,7 @@
         {% if include.cumincad_id %}
             , <a href="http://papers.cumincad.org/cgi-bin/works/paper/{{ include.cumincad_id }}" target="view">Cumincad</a>
         {% endif %}
-        {% if not include.no_pdf %}
+        {% if ! include.no_pdf %}
             , <a href="/assets/pdf/{{ include.researchgate_id }}.pdf" target="view">PDF</a>
         {% endif %}
         {% if include.link %}
