--- a/_includes/ref-book.html
+++ b/_includes/ref-book.html
@@ -33,7 +33,7 @@
         {% if include.researchgate_id %}
             <a href="https://www.researchgate.net/publication/{{ include.researchgate_id }}" target="view">ResearchGate</a>
         {% endif %}
-        {% unless include.no_pdf %}
+        {% if include.has_pdf %}
             , <a href="/assets/pdf/{{ include.researchgate_id }}.pdf" target="view">PDF</a>
         {% endif %}
         {% if include.link %}
