--- a/_includes/ref-editor.html
+++ b/_includes/ref-editor.html
@@ -44,7 +44,7 @@
         {% if include.cumincad_id %}
             , <a href="http://papers.cumincad.org/cgi-bin/works/paper/{{ include.cumincad_id }}" target="view">Cumincad</a>
         {% endif %}
-        {% unless include.no_pdf %}
+        {% if include.has_pdf %}
             , <a href="/assets/pdf/{{ include.researchgate_id }}.pdf" target="view">PDF</a>
         {% endif %}
         {% if include.link %}
